--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "querx",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "lib/main.js",
   "dependencies": {
-    "papaparse": "^5.1.1",
+    "papaparse": "^5.3.0",
     "rethinkdb": "^2.4.2",
-    "watt": "^3.3.0"
+    "watt": "^3.3.0",
+    "yargs": "^16.1.1"
   },
   "devDependencies": {},
   "scripts": {
